# mack-str

./: .gitignore  CMakeLists.txt  Makefile  base.h  main.c  mcrt_new.h  uurt_new.h  uustr.c  uustr.exe.stackdump  uustr.h
include/: uuruntime_new.h  uustr.h
lib/core/: yuens.h
mack_floss/: CMakeLists.txt
mack_floss/src/: main.c
mackstr/: CMakeLists.txt
mackstr/include/mackstr/: base.h  mackstr.h
mackstr/src/: mackstr.c  mcstr.c
mackstr/tests/: main.c
src/: Main.c  uustr.c
